KEN-12: UPDATE refactors
